Created a Help screen and added and modified words

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -407,9 +407,10 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="16dp"
-        android:inputType="text"
         android:hint="@string/action_customTemplateHint"
         android:importantForAutofill="no"
+        android:inputType="text"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/toggle_customTemplate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -423,7 +424,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="16dp"
-        android:checked="true"
+        android:checked="false"
         android:text="@string/action_customTemplate"
         android:textOff="@string/customTemplate_off"
         android:textOn="@string/customTemplate_on"
