--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,8 +6,8 @@
     <item
         android:id="@+id/action_help"
         android:enabled="true"
-        android:title="@string/action_help"
-        android:titleCondensed="@string/action_help"
+        android:title="@string/title_activity_help"
+        android:titleCondensed="@string/title_activity_help"
         android:visible="true"
         app:showAsAction="ifRoom" />
 
