--- a/app/src/main/res/xml/title_words.xml
+++ b/app/src/main/res/xml/title_words.xml
@@ -2578,6 +2578,7 @@
         <word name="Iceberg" />
         <word name="Icon" />
         <word name="Image" />
+        <word name="Incantation" />
         <word name="Incense" />
         <word name="Inch" />
         <word name="Incident" />
